# chrono-canvas

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  .gitignore  README.md  art_service.py  blog_search.py  cache.py  config.py  consensus.py  data.py  database.py  docker-compose.yml  emotion_resolver.py  llm_providers.py  main.py  met_api.py  models.py  pyproject.toml  railway.toml  record_sales.py  requirements.txt  spotify_api.py  youtube_search.py
backend/migrations/: 001_seed_emotions.py  runner.py
backend/repositories/: __init__.py  art_cache.py  emotion.py  emotion_cache.py
src/: App.tsx  index.css
src/components/: ArtCard.tsx  ArtDisplay.tsx  ArtFormSelector.tsx  DecadeSlider.tsx  Header.tsx  LoadingIndicator.tsx  LoadingModal.tsx  MusicPlayer.tsx  PaperGlobe.tsx  ShareAndFeedback.tsx  TimelineParticles.tsx  VisualArtGallery.tsx  WorldMap.tsx
src/data/: artHotspots.ts  mockData.ts
src/hooks/: useArtData.ts  useConfig.ts
src/lib/: api.ts
src/pages/: Art.tsx  Emotion.tsx  Index.tsx
