[project]
name = "chronocanvas-backend"
version = "2.0.0"
description = "ChronoCanvas API - Art through time and regions"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "ChronoCanvas Team" }
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

